<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  
   <PreferenceCategory android:title="Network Connection">
        <CheckBoxPreference
                android:key="@string/prefs_network_enable"
                android:title="@string/prefs_network_enable"
                android:defaultValue="false"
                android:summary="@string/prefs_network_enable_summary" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="Connection Details">
        <EditTextPreference       
                android:dependency="@string/prefs_network_enable"
                android:key="@string/prefs_network_frequency"
                android:title="@string/prefs_network_frequency"
                android:summary="@string/prefs_network_frequency_summary"
                android:dialogTitle="@string/prefs_network_frequency" 
                android:dialogMessage="@string/prefs_network_frequency_summary"
                android:defaultValue="30" />                     
    </PreferenceCategory>
  
</PreferenceScreen>